--- a/style.css
+++ b/style.css
@@ -63,3 +63,61 @@ body{
     margin-bottom: 20px;
     margin-top: -30px;
 }
+
+@media (max-width: 575px)
+{
+    .cards{
+        width: 100%;
+        display: flex;
+        flex-wrap: wrap;
+        /* background-color: lightgray; */
+        justify-content: space-evenly;
+        
+    }
+    .card{
+        height: 100px;
+        width: 28%;
+        border-radius: 15px;
+        margin-top: 20px;
+        background-color: red;
+        background-size: cover;
+        margin-left: 0px;
+    }
+    .overlay{
+        height: 100px;
+        width: 100%;
+        border-radius: 15px;
+        background-color:  #141A46;
+        cursor: pointer;
+    }
+    .container{
+        width: 80%;
+        padding-bottom: 50px;
+        /* background-color: gray; */
+    }
+    .padd{
+        padding:15px;
+    }
+    
+    .header{
+        height: 90px;
+        width: 100%;
+        color:  #141A46;
+        /* background-color: red; */
+        display: flex;
+        justify-content: space-between;
+        
+    }
+    .header h1{
+        font-size: 22px;
+        margin-left: -42px;
+    }
+    
+
+    .footer{
+        text-align: center;
+        margin-bottom: 20px;
+        margin-top: -10px;
+        font-size: 10px;
+    }
+}
